--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,4 +1,5 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
+
 client_id = "7d90bcdf99c9428d33dfaf60d6180f51"
 name = "chatbot"
 handle = "chatbot-242"
@@ -13,10 +14,10 @@ api_version = "2025-04"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_products,write_products,read_orders,write_orders,customer_read_customers,customer_read_orders,customer_read_store_credit_account_transactions,customer_read_store_credit_accounts,unauthenticated_read_product_listings"
+scopes = "customer_read_customers,customer_read_orders,customer_read_store_credit_account_transactions,customer_read_store_credit_accounts,read_orders,read_products,unauthenticated_read_product_listings,write_orders,write_products"
 
 [auth]
-redirect_urls = [ 
+redirect_urls = [
   "https://chatbot-production-48d8.up.railway.app/auth/callback",
   "https://chatbot-production-48d8.up.railway.app/api/auth/callback"
 ]
@@ -25,6 +26,4 @@ redirect_urls = [
 embedded = false
 
 [mcp.customer_authentication]
-redirect_uris = [
-  "https://chatbot-production-48d8.up.railway.app/callback"
-]
+redirect_uris = [ "https://chatbot-production-48d8.up.railway.app/callback" ]
